--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <h1>Amsu Games von Gamesu</h1>
     <a href="https://gamesu.itch.io/amsu1"><img src="https://img.itch.zone/aW1nLzE0MDQ0ODA2LnBuZw==/315x250%23c/EpKNhF.png"></a>
     <a href="https://gamesu.itch.io/amsu2"><img src="https://img.itch.zone/aW1nLzE0MDQ0ODI0LnBuZw==/360x286%23c/kRVDKz.png"></a>
-    <a href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQ7v7zvRsL7YsQOBPKqsckGCpqeOGhm4x3qg&s"></a>
+    <a href="https://gamesu.itch.io/amsu-noms"><img src="https://img.itch.zone/aW1nLzE0MDUwNDE0LmdpZg==/360x286%23c/RPhCIC.gif"></a>
 
 
 
