--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
 <div class="content">
     <h1>Amsu Games von Gamesu</h1>
-    <a href="https://gamesu.itch.io/amsu1"><img src="https://img.itch.zone/aW1nLzE0MDQ0ODA2LnBuZw==/315x250%23c/EpKNhF.png"></a>
-    <a href="https://gamesu.itch.io/amsu2"><img src="https://img.itch.zone/aW1nLzE0MDQ0ODI0LnBuZw==/360x286%23c/kRVDKz.png"></a>
-    <a href="https://gamesu.itch.io/amsu-noms"><img src="https://img.itch.zone/aW1nLzE0MDUwNDE0LmdpZg==/360x286%23c/RPhCIC.gif"></a>
+    <a href="https://gamesu.itch.io/amsu1"><img src="https://img.itch.zone/aW1nLzE0MDU3NjExLnBuZw==/360x286%23c/gU%2FaHs.png"></a>
+    <a href="https://gamesu.itch.io/amsu2"><img src="https://img.itch.zone/aW1nLzE0MDU3NjEzLnBuZw==/360x286%23c/90G0yE.png"></a>
+    <a href="https://gamesu.itch.io/amsu-noms"><img src="https://img.itch.zone/aW1nLzE0MDU3NjA4LnBuZw==/360x286%23c/23HzKP.png"></a>
 
 
 
