--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+  <meta property="og:title" content="Amsu Mini Games">
+  <meta property="og:description" content="Alle Amsu Mini Games von Gamesu">
+  <meta property="og:url" content="https://cute.amsu-game.de/">
+  <meta property="og:image" content="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
+  <meta property="og:type" content="website">
+
+
     <title>Amsu Mini Game</title>
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
     <style>
@@ -57,6 +66,10 @@
         .content h1 {
             font-size: 50px;
         }
+.content img:hover {
+    transform: scale(1.1); /* Vergrößerung um 10% (kann angepasst werden) */
+    transition: transform 0.3s ease; /* Übergangsdauer und -effekt */
+}
 
 
     </style>
