--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <a href="https://gamesu.itch.io/amsu1"><img src="https://img.itch.zone/aW1nLzE0MDU3Njk0LnBuZw==/360x286%23c/As7o7i.png"></a>
     <a href="https://gamesu.itch.io/amsu2"><img src="https://img.itch.zone/aW1nLzE0MDU3Njk4LnBuZw==/360x286%23c/LKpiEf.png"></a>
     <a href="https://gamesu.itch.io/amsu-noms"><img src="https://img.itch.zone/aW1nLzE0MDU3NjkyLnBuZw==/360x286%23c/DltZmz.png"></a>
+    <a href="https://gamesu.itch.io/amsu-says"><img src="https://img.itch.zone/aW1nLzE0MDgzNjY3LnBuZw==/360x286%23c/dZDVGv.png"></a>
 
 
 
