--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <div class="menu-bar">
     <a href="index.html"><img src="https://resource.lightlivebot.gw75.de/icons/home.png" height="40" width="40"></a>
     <a href="https://amaterasuvt.carrd.co/"><img src="src/weristamsu.png" height="40" width="40"></a>
-    <a href="https://gw75.notion.site/Copyright-21c2eaa7cb6743fc80884913c52986f4?pvs=4"><img src="https://cdn.pixabay.com/photo/2016/04/22/14/31/copyright-1345865_960_720.png" height="40" width="40"></a>
+    <a href="https://www.amsu-game.de/Copyright/"><img src="https://cdn.pixabay.com/photo/2016/04/22/14/31/copyright-1345865_960_720.png" height="40" width="40"></a>
 
 </div>
 
