--- a/404.html
+++ b/404.html
@@ -64,14 +64,14 @@
 
 <div class="menu-bar">
     <a href="https://www.amsu-game.de"><img src="https://resource.lightlivebot.gw75.de/icons/home.png" height="40" width="40"></a>
-    <a href="https://www.amsu-game.de/cute"><img src="https://www.amsu-game.de/src/weristamsu.png" height="40" width="40"></a>
+    <a href="https://www.amsu-game.de/cute"><img src="https://www.amsu-game.de/src/image/weristamsu.png" height="40" width="40"></a>
     <a href="https://www.amsu-game.de/Copyright/"><img src="https://cdn.pixabay.com/photo/2016/04/22/14/31/copyright-1345865_960_720.png" height="40" width="40"></a>
 </div>
 
 <div class="content">
 <h1>404</h1>
     <h1>Baka</h1>
-    <img src="src/image/404.webp">
+    <img src="/src/image/404.webp">
 
 </div>
 
