--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <p></p>
         <a id="link" href="" style="display: none; font-size: 50px; ">Click me</a>
     </div>
-    <a href="https://gamesu.itch.io/amsu1" id="Fange Amsu"><img src="https://img.itch.zone/aW1nLzE0MDgzNTkxLnBuZw==/360x286%23c/GzPbJl.png"></a>
-    <a href="https://gamesu.itch.io/amsu2" id="Finde Amsu"><img src="https://img.itch.zone/aW1nLzE0MDgzNTk3LnBuZw==/360x286%23c/EuWaGX.png"></a>
-    <a href="https://gamesu.itch.io/amsu-noms" id="Amsu Noms"><img src="https://img.itch.zone/aW1nLzE0MDU3NjkyLnBuZw==/360x286%23c/DltZmz.png"></a>
-    <a href="https://gamesu.itch.io/amsu-says" id="Amsu Say"><img src="https://img.itch.zone/aW1nLzE0MDgzNjY3LnBuZw==/360x286%23c/dZDVGv.png"></a>
+    <a href="Games/Fange-Amsu" id="Fange Amsu"><img src="https://img.itch.zone/aW1nLzE0MDgzNTkxLnBuZw==/360x286%23c/GzPbJl.png"></a>
+    <a href="Games/Finde-Amsu" id="Finde Amsu"><img src="https://img.itch.zone/aW1nLzE0MDgzNTk3LnBuZw==/360x286%23c/EuWaGX.png"></a>
+    <a href="Games/Amsu-Noms" id="Amsu Noms"><img src="https://img.itch.zone/aW1nLzE0MDU3NjkyLnBuZw==/360x286%23c/DltZmz.png"></a>
+    <a href="Games/Amsu-Say" id="Amsu Say"><img src="https://img.itch.zone/aW1nLzE0MDgzNjY3LnBuZw==/360x286%23c/dZDVGv.png"></a>
 
 
 
