--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://cute.amsu-game.de/">
     <meta property="og:image" content="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
     <meta property="og:type" content="website">
+
     <audio id="uwu" src="src/audio/uwu.mp3"></audio>
     <audio id="nya" src="src/audio/nya.ogg"></audio>
     <audio id="paimon" src="src/audio/1175392086627975260.ogg"></audio>
@@ -17,7 +18,9 @@
 
 
     <title>Amsu Mini Game</title>
-    <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
+    <link rel="manifest" href="manifest.json">
+
+    <link rel="icon" type="image/x-icon" href="src/fav.ico">
 <link rel="stylesheet" href="src/code/main.css">
 
 </head>
