--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
 
 
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6B3TQHTXBP"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6B3TQHTXBP');
+    </script>
+
 </div>
 <script src="src/code/main.js"></script>
 
