--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://cute.amsu-game.de/">
     <meta property="og:image" content="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
     <meta property="og:type" content="website">
+    <meta name="mobile-web-app-capable" content="yes">
 
     <audio id="uwu" src="src/audio/uwu.mp3"></audio>
     <audio id="nya" src="src/audio/nya.ogg"></audio>
