--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Amsu Mini Game</title>
     <link rel="manifest" href="manifest.json">
 
-    <link rel="icon" type="image/x-icon" href="src/fav.ico">
+    <link rel="icon" type="image/x-icon" href="src/Amaterasu.png">
 <link rel="stylesheet" href="src/code/main.css">
 
 </head>
