--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="src/favicon/apple-touch-icon-57x57.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="src/favicon/apple-touch-icon-114x114.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="src/favicon/apple-touch-icon-72x72.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="src/favicon/apple-touch-icon-144x144.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="60x60" href="src/favicon/apple-touch-icon-60x60.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="src/favicon/apple-touch-icon-120x120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="src/favicon/apple-touch-icon-76x76.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="src/favicon/apple-touch-icon-152x152.png" />
+    <link rel="icon" type="image/png" href="src/favicon/favicon-196x196.png" sizes="196x196" />
+    <link rel="icon" type="image/png" href="src/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/png" href="src/favicon/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="src/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="src/favicon/favicon-128.png" sizes="128x128" />
+    <meta name="application-name" content="&nbsp;"/>
+    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileImage" content="src/favicon/mstile-144x144.png" />
+    <meta name="msapplication-square70x70logo" content="src/favicon/mstile-70x70.png" />
+    <meta name="msapplication-square150x150logo" content="src/favicon/mstile-150x150.png" />
+    <meta name="msapplication-wide310x150logo" content="src/favicon/mstile-310x150.png" />
+    <meta name="msapplication-square310x310logo" content="src/favicon/mstile-310x310.png" />
 
 
     <meta property="og:title" content="Amsu Mini Games">
@@ -10,7 +30,6 @@
     <meta property="og:url" content="https://cute.amsu-game.de/">
     <meta property="og:image" content="https://cdn.discordapp.com/emojis/1141994808689307649.webp?size=128&quality=lossless">
     <meta property="og:type" content="website">
-    <meta name="mobile-web-app-capable" content="yes">
 
     <audio id="uwu" src="src/audio/uwu.mp3"></audio>
     <audio id="nya" src="src/audio/nya.ogg"></audio>
@@ -21,7 +40,7 @@
     <title>Amsu Mini Game</title>
     <link rel="manifest" href="manifest.json">
 
-    <link rel="icon" type="image/x-icon" href="src/Amaterasu.png">
+    <link rel="icon" type="image/x-icon" href="src/fav.ico">
 <link rel="stylesheet" href="src/code/main.css">
 
 </head>
