--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="src/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="src/favicon/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="src/favicon/favicon-128.png" sizes="128x128" />
-    <meta name="application-name" content="&nbsp;"/>
+    <meta name="application-name" content="Amsu mini Games"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="src/favicon/mstile-144x144.png" />
     <meta name="msapplication-square70x70logo" content="src/favicon/mstile-70x70.png" />
@@ -24,7 +24,7 @@
     <meta name="msapplication-wide310x150logo" content="src/favicon/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="src/favicon/mstile-310x310.png" />
 
-
+    <meta name="mobile-web-app-capable" content="yes">
     <meta property="og:title" content="Amsu Mini Games">
     <meta property="og:description" content="Alle Amsu Mini Games von Gamesu">
     <meta property="og:url" content="https://cute.amsu-game.de/">
