--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <a href="Games/Finde-Amsu" id="Finde Amsu"><img src="https://img.itch.zone/aW1nLzE0MDgzNTk3LnBuZw==/360x286%23c/EuWaGX.png"></a>
     <a href="Games/Amsu-Noms" id="Amsu Noms"><img src="https://img.itch.zone/aW1nLzE0MDU3NjkyLnBuZw==/360x286%23c/DltZmz.png"></a>
     <a href="Games/Amsu-Say" id="Amsu Say"><img src="https://img.itch.zone/aW1nLzE0MDgzNjY3LnBuZw==/360x286%23c/dZDVGv.png"></a>
+    <a href="Games/Flappy-Amsu" id="flying amsu flappy amsu"><img src="/src/image/Flappy-Amsu.png"></a>
 
 
 
