--- a/Copyright/index.html
+++ b/Copyright/index.html
@@ -49,6 +49,8 @@
             <li><strong>Hintergrund in den Games:</strong> <a href="https://pixabay.com/de/">pixabay</a> und <a href="https://de.freepik.com">freepik</a></li>
             <li><strong>Thumbnails:</strong> @Gamesu</li>
             <li><strong>Amsu Avatar:</strong> <a href="https://amaterasuvt.carrd.co/">@Amaterasu_vt</a></li>
+            <li><a href="https://www.vecteezy.com/free-png/sushi-png">404 - Sushi Png PNGs by Vecteezy</a></li>
+            <li><a href="http://gregoryjerian.com/dinos/assets/img/bronto.png">404 - Dino Nugget from gregoryjerian.com/dinos</a></li>
         </ul>
     </div>
     <p style=" font-size: 20px">&nbsp</p>
