--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>Redirecting to <a href="https://amsu-game.de/maintenance.html">amsu-game.de/maintenance.html</a></p>
+    <p>Redirecting to <a href="https://www.amsu-game.de/maintenance.html">amsu-game.de/maintenance.html</a></p>
 </body>
 </html>
