--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://amsu-game.de/maintenance.html">
+    <meta http-equiv="refresh" content="0;url=https://www.amsu-game.de/maintenance.html">
     <title>Redirecting...</title>
 </head>
 <body>
